# sphinx-favicon

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG  LICENSE  README.md  dev-requirements.txt  docs-requirements.txt  noxfile.py  pyproject.toml  setup.cfg  setup.py  toto.ipynb
.github/workflows/: basic-ci.yml  scheduled-compat.yml
docs/source/: browserconfig.xml  conf.py  configuration.rst  contribute.rst  index.rst  quickstart.rst
docs/source/_static/: announcment.html  custom.css
sphinx-favicon/: __init__.py
sphinx_favicon/: __init__.py
tests/: conftest.py  test_options.py
tests/roots/test-href_and_static/: conf.py  index.rst
tests/roots/test-list_of_three_dicts/: conf.py
tests/roots/test-list_of_three_dicts_automated_values/: conf.py
tests/roots/test-list_of_three_icons_automated_values/: conf.py
tests/roots/test-list_of_urls/: conf.py
tests/roots/test-msapp_meta/: conf.py
tests/roots/test-relative_paths/: conf.py
tests/roots/test-single_dict/: conf.py
tests/roots/test-static_files/: conf.py
tests/roots/test-static_files/nested/: page.rst
