[metadata]
name = sphinx-favicon
version = 0.2
description = Sphinx Extension adding support for custom favicons
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Timo Cornelius Metzger
author_email = coding@tcmetzger.net
url = https://github.com/tcmetzger/sphinx-favicon
license = MIT
license_files = LICENSE
keywords = sphinx extension favicon meta html
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python
    Topic :: Utilities
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation
    Topic :: Text Processing

[options]
packages = sphinx_favicon
install_requires =
    sphinx >= 3.4
python_requires = >=3.7

[options.extras_require]
test = 
    pytest
    beautifulsoup4
dev = 
    nox
    pre-commit
doc = 
    sphinx
    pydata-sphinx-theme
